# Control_Board

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Control_Board.ioc  Control_Board.launch  README.md  mx-generated.cmake
App/: CMakeLists.txt
App/Control/: CMakeLists.txt
App/Control/Inc/: PID_controller.h
App/Control/Src/: PID_controller.c
App/Core/Inc/: PID_manager.h
App/Core/Src/: main.c
App/Drivers/: CMakeLists.txt
App/Drivers/Gpio/Inc/: h755_gpio.h
App/Drivers/Gpio/Src/: gpio.c
App/Drivers/Inc/: emc_h755_gpio.h  emc_h755_isr.h
App/Drivers/Src/: emc_gpio.c
App/Error/: CMakeLists.txt
App/Error/Inc/: emc_assert.h  emc_error.h
App/Error/Src/: emc_assert.c
App/Test/: CMakeLists.txt
App/Test/Src/: testcpp.cpp
CM4/: CMakeLists.txt  mx-generated.cmake  stm32h755xx_flash_CM4.ld  stm32h755xx_sram2_CM4.ld
CM4/Core/Inc/: FreeRTOSConfig.h
CM4/Core/Src/: main.c  stm32h7xx_hal_timebase_tim.c
CM7/: CMakeLists.txt  mx-generated.cmake  stm32h755xx_flash_CM7.ld  stm32h755xx_sram1_CM7.ld
CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
